--- a/template/package.json
+++ b/template/package.json
@@ -29,7 +29,8 @@
     "vue-router": "^3.0.1",{{/router}}
     "axios": "^0.17.1",
     "vue-axios": "^2.0.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "d3": "^4.12.2"
   },
   "devDependencies": {
     {{#lint}}
