--- a/template/package.json
+++ b/template/package.json
@@ -33,7 +33,7 @@
     "d3": "^4.12.2",
     "vega": "^3.0.9",
     "vega-lite": "^2.0.4",
-    "vega-embed": "^3.0.0-rc7",
+    "vega-embed": "^3.0.0-rc7"
   },
   "devDependencies": {
     {{#lint}}
