--- a/template/package.json
+++ b/template/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "vue": "^2.5.2"{{#router}},
     "vue-router": "^3.0.1",{{/router}}
+    "bootstrap": "^4.0.0",
+    "bootstrap-vue": "^2.0.0-rc.0",
     "axios": "^0.17.1",
     "vue-axios": "^2.0.2",
     "vuex": "^3.0.1",
