--- a/template/package.json
+++ b/template/package.json
@@ -32,8 +32,12 @@
     "axios": "^0.17.1",
     "vue-axios": "^2.0.2",
     "vuex": "^3.0.1",
-    "d3": "^4.12.2"
-  },
+    "d3": "^4.12.2",
+    "vega": "^3.0.10",
+    "vega-embed": "^3.0.0",
+    "vega-lite": "^2.1.2",
+    "leaflet": "^1.3.1"
+},
   "devDependencies": {
     {{#lint}}
     "babel-eslint": "^8.2.1",
