--- a/template/package.json
+++ b/template/package.json
@@ -25,8 +25,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"{{#router}},
-    "vue-router": "^3.0.1"{{/router}},
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
     "bootstrap": "^4.0.0",
     "bootstrap-vue": "^2.0.0-rc.0",
     "axios": "^0.17.1",
