--- a/template/package.json
+++ b/template/package.json
@@ -29,6 +29,7 @@
     "vue-router": "^3.0.1",
     "bootstrap": "^4.0.0",
     "bootstrap-vue": "^2.0.0-rc.0",
+    "uiv": "^0.18.0",
     "axios": "^0.17.1",
     "vue-axios": "^2.0.2",
     "vuex": "^3.0.1",
