--- a/template/package.json
+++ b/template/package.json
@@ -7,38 +7,30 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    {{#if_eq runner "jest"}}
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    {{/if_eq}}
-    {{#if_eq runner "karma"}}
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    {{/if_eq}}
-    {{#e2e}}
+    "unit": "jest --config test/unit/jest.conf.js",
+    "coverage": "jest --config test/unit/jest.conf.js --coverage",
+    "test": "npm run lint && npm run coverage",
+    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "e2e": "node test/e2e/runner.js",
-    {{/e2e}}
-    {{#if_or unit e2e}}
-    "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}",
-    {{/if_or}}
-    {{#lint}}
-    "lint": "eslint --ext .js,.vue src{{#unit}} test/unit{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}",
-    {{/lint}}
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "bootstrap": "^4.0.0",
-    "bootstrap-vue": "^2.0.0-rc.0",
-    "uiv": "^0.18.0",
     "axios": "^0.17.1",
-    "vue-axios": "^2.0.2",
-    "vuex": "^3.0.1",
     "d3": "^4.12.2",
+    "leaflet": "^1.3.1",
+    "node-sass": "^4.8.1",
+    "proj4": "^2.4.4",
+    "proj4leaflet": "^1.0.2",
+    "sass-loader": "^6.0.7",
+    "stijl": "git+https://git@github.com/Amsterdam/stijl.git",
     "vega": "^3.0.10",
     "vega-embed": "^3.0.0",
     "vega-lite": "^2.1.2",
-    "leaflet": "^1.3.1"
-},
+    "vue": "^2.5.2",
+    "vue-axios": "^2.0.2",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
+  },
   "devDependencies": {
     {{#lint}}
     "babel-eslint": "^8.2.1",
