--- a/template/package.json
+++ b/template/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "^4.0.0",
     "d3": "^4.12.2",
+    "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
     "node-sass": "^4.8.1",
+    "popper.js": "^1.14.1",
     "proj4": "^2.4.4",
     "proj4leaflet": "^1.0.2",
     "sass-loader": "^6.0.7",
