--- a/template/package.json
+++ b/template/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
-    "d3": "^4.12.2",
+    "d3": "^5.0.0",
     "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
     "node-sass": "^4.8.1",
@@ -26,9 +26,9 @@
     "proj4leaflet": "^1.0.2",
     "sass-loader": "^6.0.7",
     "stijl": "git+https://git@github.com/Amsterdam/stijl.git",
-    "vega": "^3.0.10",
-    "vega-embed": "^3.0.0",
-    "vega-lite": "^2.1.2",
+    "vega-canvas": "^1.0.1",
+    "vega-embed": "^3.4.0",
+    "vega-lite": "^2.3.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^3.0.1",
