--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docs:deploy": "bash ./deploy-docs.sh"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "vue-cli": "^2.8.1"
   }
 }
