--- a/template/package.json
+++ b/template/package.json
@@ -12,7 +12,8 @@
     "test": "npm run lint && npm run coverage",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "e2e": "node test/e2e/runner.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "docs": "rimraf docs && npm run build && mv dist docs"
   },
   "dependencies": {
     "axios": "^0.17.1",
