--- a/template/package.json
+++ b/template/package.json
@@ -21,6 +21,7 @@
     "d3": "^5.0.0",
     "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
+    "marked": "^0.3.19",
     "node-sass": "^4.8.1",
     "popper.js": "^1.14.1",
     "proj4": "^2.4.4",
