--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -28,6 +28,8 @@ RUN git config --global url."https://".insteadOf git:// && \
 COPY . /app
 
 RUN npm run build && cp -r /app/dist/. /var/www/html/
+RUN mkdir /var/www/html/{{ name }}
+RUN mv /var/www/html/static /var/www/html/{{ name }}/static
 
 # forward request and error logs to docker log collector
 RUN ln -sf /dev/stdout /var/log/nginx/access.log \
