--- a/template/package.json
+++ b/template/package.json
@@ -34,7 +34,8 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "request": ">=2.87.0"
   },
   "devDependencies": {
     {{#lint}}
@@ -87,7 +88,7 @@
     "babel-register": "^6.22.0",
     "chromedriver": "^2.27.2",
     "cross-spawn": "^5.0.1",
-    "nightwatch": "^0.9.12",
+    "nightwatch": "^1.0.6",
     "selenium-server": "^3.0.1",
     {{/e2e}}
     "autoprefixer": "^7.1.2",
@@ -117,7 +118,7 @@
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.0.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
