--- a/template/package.json
+++ b/template/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "bootstrap": "^4.0.0",
     "d3": "^5.0.0",
     "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
@@ -27,7 +26,7 @@
     "proj4": "^2.4.4",
     "proj4leaflet": "^1.0.2",
     "sass-loader": "^6.0.7",
-    "stijl": "git+https://git@github.com/Amsterdam/stijl.git",
+    "stijl": "Amsterdam/stijl.git",
     "vega-canvas": "^1.0.1",
     "vega-embed": "^3.4.0",
     "vega-lite": "^2.3.1",
